# yubikey-init

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  README.md  SECURITY.md  pyproject.toml  renovate.json
.github/workflows/: ci.yml  release.yml
src/yubikey_init/: __init__.py  __main__.py  backup.py  config.py  diagnostics.py  environment.py  errors.py  gpg_ops.py  inventory.py  main.py  prompts.py  safety.py  state_machine.py  storage_ops.py  types.py  yubikey_ops.py
src/yubikey_init/tui/: __init__.py  actions.py  app.py  controller.py  styles.tcss
src/yubikey_init/tui/screens/: __init__.py  device_detail.py  device_list.py  diagnostics.py  key_detail.py  key_list.py  main_menu.py  wizard.py
src/yubikey_init/tui/widgets/: __init__.py  confirm_dialog.py  status_indicator.py
tests/: conftest.py
tests/e2e/: test_workflow.py
tests/hardware/: test_yubikey_ops.py
tests/integration/: test_gpg_ops.py  test_workflow.py
tests/unit/: test_backup.py  test_config.py  test_diagnostics.py  test_environment.py  test_errors.py  test_gpg_ops.py  test_inventory.py  test_main.py  test_main_module.py  test_prompts.py  test_safety.py  test_state_machine.py  test_storage_ops.py  test_types.py  test_yubikey_ops.py
tests/unit/test_tui/: test_actions.py  test_app.py  test_controller.py  test_device_detail_screen.py  test_device_list_screen.py  test_diagnostics_screen.py  test_dialogs.py  test_key_detail_screen.py  test_key_list_screen.py  test_main_menu_screen.py  test_screens.py  test_tui_init.py  test_widgets.py  test_wizard.py
