[project]
name = "yubikey-init"
version = "0.1.0"
description = "Automated YubiKey GPG initialization and management"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Lars Close" }]
requires-python = ">=3.11"
keywords = ["yubikey", "gpg", "gnupg", "security", "authentication", "hardware-key", "smartcard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
dependencies = [
    "pexpect>=4.9",
    "rich>=13.0",
    "textual>=0.50.0",
]

[project.urls]
Homepage = "https://github.com/LarsenClose/yubikey-init"
Documentation = "https://github.com/LarsenClose/yubikey-init#readme"
Repository = "https://github.com/LarsenClose/yubikey-init.git"
Issues = "https://github.com/LarsenClose/yubikey-init/issues"
Changelog = "https://github.com/LarsenClose/yubikey-init/blob/main/CHANGELOG.md"

[project.scripts]
yubikey-init = "yubikey_init.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "mutmut>=2.4",
    "mypy>=1.8",
    "ruff>=0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yubikey_init"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "hardware: tests requiring physical YubiKey",
    "slow: tests that take significant time",
]
addopts = "-v --tb=short"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["src/yubikey_init"]
branch = true

[tool.coverage.report]
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = ["pexpect", "pexpect.*"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "ARG"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG001", "ARG002", "ARG005", "SIM102", "SIM117", "B017"]  # Allow unused args, nested with/if, blind exception in tests
"src/yubikey_init/prompts.py" = ["ARG002"]  # MockPrompts has unused args by design (test double)

[tool.mutmut]
paths_to_mutate = "src/yubikey_init"
tests_dir = "tests/"
